--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-VERSION_NAME=0.2.0-SNAPSHOT
-VERSION_CODE=1
+VERSION_NAME=0.2.0
+VERSION_CODE=2
 GROUP=com.vanniktech
 
 POM_DESCRIPTION=Very opinionated Lint Checks
