--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-VERSION_NAME=0.3.0-SNAPSHOT
-VERSION_CODE=2
+VERSION_NAME=0.3.0
+VERSION_CODE=3
 GROUP=com.vanniktech
 
 POM_DESCRIPTION=Very opinionated Lint Checks
