--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,26 @@
 apply plugin: 'com.github.ben-manes.versions'
+apply plugin: 'com.vanniktech.code.quality.tools'
 
 buildscript {
   repositories {
     jcenter()
   }
   dependencies {
+    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.4.0'
     classpath 'com.android.tools.build:gradle:2.3.0'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.14.0'
   }
 }
+
+codeQualityTools {
+  checkstyle {
+    toolVersion = '7.6.1'
+  }
+  pmd {
+    toolVersion = '5.5.5'
+  }
+}
+
 
 allprojects {
   repositories {
