--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-VERSION_NAME=0.4.0-SNAPSHOT
-VERSION_CODE=3
+VERSION_NAME=0.4.0
+VERSION_CODE=4
 GROUP=com.vanniktech
 
 POM_DESCRIPTION=Very opinionated Lint Checks
