--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-25.0.2
-    - android-25
-    - extra-android-support
-    - extra-android-m2repository
 
 jdk:
   - oraclejdk8
+
+before_script:
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
 
 before_install:
   - pip install --user codecov
