--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'com.vanniktech.code.quality.tools'
+apply plugin: 'com.vanniktech.android.junit.jacoco'
 
 buildscript {
   repositories {
     jcenter()
   }
   dependencies {
+    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.7.0'
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.5.0'
     classpath 'com.android.tools.build:gradle:2.3.0'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.14.0'
