--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-VERSION_NAME=0.5.0-SNAPSHOT
-VERSION_CODE=4
+VERSION_NAME=0.5.0
+VERSION_CODE=5
 GROUP=com.vanniktech
 
 POM_DESCRIPTION=Very opinionated Lint Checks
