RawDimenDetector: Allow 0dp on merge with a ConstraintLayout parentTag.

--- a/code_quality_tools/detekt.yml
+++ b/code_quality_tools/detekt.yml
@@ -1,5 +1,9 @@
 failFast: true
 
+potential-bugs:
+  UnsafeCast:
+    active: false // We know what we're doing.
+
 style:
   MaxLineLength:
     active: false
