--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,6 @@ POM_DEVELOPER_NAME=Niklas Baudy
 
 # We need to define those here since adding Gradle Plugins is only allowed before afterEvaluate.
 # Defining values with custom extensions are not visible at this prior step though.
-codeQualityTools.detekt.gradlePluginVersion = 1.0.0.RC5-6
+codeQualityTools.detekt.gradlePluginVersion = 1.0.0.RC6
 codeQualityTools.errorProne.gradlePluginVersion = 0.0.10
 codeQualityTools.cpd.gradlePluginVersion = 1.0
