Update Detekt to 1.0.0.RC6-2

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ codeQualityTools {
     toolVersion = '0.12.1'
   }
   detekt {
-    toolVersion = '1.0.0.RC6'
+    toolVersion = '1.0.0.RC6-2'
   }
   errorProne {
     toolVersion = '2.1.2'
