--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     kotlin: '1.2.0',
     minSdk: 9,
     compileSdk: 27,
-    lint: '26.0.1',
+    lint: '26.1.0-beta4',
   ]
 
   ext.deps = [
