--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ apply plugin: 'com.vanniktech.android.junit.jacoco'
 
 buildscript {
   ext.versions = [
-    kotlin: '1.2.0',
+    kotlin: '1.2.31',
     minSdk: 9,
     compileSdk: 27,
-    lint: '26.1.0-rc01',
+    lint: '26.1.0',
   ]
 
   ext.deps = [
@@ -23,14 +23,13 @@ buildscript {
 
   repositories {
     mavenCentral()
-    jcenter()
     google()
     gradlePluginPortal()
   }
   dependencies {
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.11.0'
-    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.9.0'
-    classpath 'com.android.tools.build:gradle:3.0.1'
+    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.10.0'
+    classpath 'com.android.tools.build:gradle:3.1.0'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
   }
@@ -44,7 +43,7 @@ codeQualityTools {
     toolVersion = '6.0.1'
   }
   ktlint {
-    toolVersion = '0.19.0'
+    toolVersion = '0.20.0'
   }
   detekt {
     toolVersion = '1.0.0.RC6-2'
