--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     kotlin: '1.2.31',
     minSdk: 9,
     compileSdk: 27,
-    lint: '26.1.1',
+    lint: '26.2.0-alpha11',
   ]
 
   ext.deps = [
