Use Gradle Maven Publish Plugin for publishing.

--- a/lint-rules-android/build.gradle
+++ b/lint-rules-android/build.gradle
@@ -16,4 +16,4 @@ dependencies {
   lintChecks project(':lint-rules-android-lint')
 }
 
-apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
+apply plugin: "com.vanniktech.maven.publish"
