--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ buildscript {
   dependencies {
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.11.0'
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.10.0'
+    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.1.0'
+
     classpath 'com.android.tools.build:gradle:3.1.0'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
