--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     kotlin: '1.2.41',
     minSdk: 9,
     compileSdk: 27,
-    lint: '26.2.0-alpha17',
+    lint: '26.2.0-alpha18',
   ]
 
   ext.deps = [
@@ -69,7 +69,7 @@ allprojects {
   }
 }
 
-task wrapper(type: Wrapper) {
+wrapper {
   gradleVersion = '4.8'
   distributionType = Wrapper.DistributionType.ALL
 }
