--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     kotlin: '1.2.41',
     minSdk: 9,
     compileSdk: 27,
-    lint: '26.2.0-alpha18',
+    lint: '26.2.0-beta01',
   ]
 
   ext.deps = [
