--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     kotlin: '1.2.41',
     minSdk: 9,
     compileSdk: 27,
-    lint: '26.2.0-alpha17',
+    lint : '26.1.3',
   ]
 
   ext.deps = [
@@ -31,7 +31,7 @@ buildscript {
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.10.0'
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.2.0'
 
-    classpath 'com.android.tools.build:gradle:3.1.0'
+    classpath 'com.android.tools.build:gradle:3.1.3'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
   }
