--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ apply plugin: 'com.vanniktech.android.junit.jacoco'
 
 buildscript {
   ext.versions = [
-    kotlin: '1.2.60',
+    kotlin: '1.2.61',
     minSdk: 9,
     compileSdk: 27,
-    lint: '26.2.0-beta05',
+    lint: '26.2.0-rc01',
   ]
 
   ext.deps = [
