--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     kotlin: '1.2.71',
     minSdk: 9,
     compileSdk: 28,
-    lint: '26.3.0-alpha13',
+    lint: '26.3.0-beta01',
   ]
 
   ext.deps = [
@@ -31,7 +31,7 @@ buildscript {
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.13.0'
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.6.0'
 
-    classpath 'com.android.tools.build:gradle:3.2.0'
+    classpath 'com.android.tools.build:gradle:3.2.1'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
   }
