Update Android Gradle Plugin to 3.3.0 and Gradle to 5.1.1

--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ apply plugin: 'com.vanniktech.android.junit.jacoco'
 
 buildscript {
   ext.versions = [
-    kotlin: '1.2.71',
+    kotlin: '1.3.11',
     minSdk: 9,
     compileSdk: 28,
-    lint: '26.3.0-rc03',
+    lint: '26.3.0',
   ]
 
   ext.deps = [
@@ -28,10 +28,10 @@ buildscript {
   }
   dependencies {
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.12.0'
-    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.13.0'
-    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.6.0'
+    classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.15.0'
+    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.7.0'
 
-    classpath 'com.android.tools.build:gradle:3.2.1'
+    classpath 'com.android.tools.build:gradle:3.3.0'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
   }
@@ -39,10 +39,10 @@ buildscript {
 
 codeQualityTools {
   ktlint {
-    toolVersion = '0.28.0'
+    toolVersion = '0.29.0'
   }
   detekt {
-    toolVersion = '1.0.0.RC8'
+    toolVersion = '1.0.0-RC12'
   }
   findbugs {
     enabled = false // https://github.com/vanniktech/gradle-code-quality-tools-plugin/pull/126
@@ -58,6 +58,6 @@ allprojects {
 }
 
 wrapper {
-  gradleVersion = '4.10.2'
+  gradleVersion = '5.1.1'
   distributionType = Wrapper.DistributionType.ALL
 }
