--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     kotlin: '1.3.21',
     minSdk: 9,
     compileSdk: 28,
-    lint: '26.3.1',
+    lint: '26.5.0-alpha09',
   ]
 
   ext.deps = [
@@ -31,7 +31,7 @@ buildscript {
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.17.0'
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.8.0'
 
-    classpath 'com.android.tools.build:gradle:3.3.1'
+    classpath 'com.android.tools.build:gradle:3.5.0-alpha09'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
   }
@@ -51,6 +51,15 @@ allprojects {
     mavenCentral()
     google()
     jcenter()
+  }
+}
+
+subprojects { project ->
+  project.plugins.withId("com.android.library") {
+    // TODO replace with https://issuetracker.google.com/issues/72050365 once released.
+    project.android.libraryVariants.all {
+      it.generateBuildConfigProvider.configure { it.enabled = false }
+    }
   }
 }
 
