--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     kotlin: '1.3.31',
     minSdk: 9,
     compileSdk: 28,
-    lint: '26.5.0-alpha13',
+    lint: '26.5.0-beta02',
   ]
 
   ext.deps = [
@@ -31,7 +31,7 @@ buildscript {
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.18.0'
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.8.0'
 
-    classpath 'com.android.tools.build:gradle:3.5.0-alpha13'
+    classpath 'com.android.tools.build:gradle:3.5.0-beta02'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.21.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
   }
