--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ apply plugin: 'com.vanniktech.android.junit.jacoco'
 
 buildscript {
   ext.versions = [
-    kotlin: '1.3.50',
+    kotlin: '1.3.61',
     minSdk: 9,
-    compileSdk: 28,
-    lint: '26.5.0',
+    compileSdk: 29,
+    lint: '26.6.0-rc03',
   ]
 
   ext.deps = [
@@ -29,10 +29,10 @@ buildscript {
   dependencies {
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.15.0'
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.19.0'
-    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.8.0'
+    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.9.0'
 
-    classpath 'com.android.tools.build:gradle:3.5.0'
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.22.0'
+    classpath 'com.android.tools.build:gradle:3.6.0-rc03'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.27.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
   }
 }
@@ -43,6 +43,9 @@ codeQualityTools {
   }
   detekt {
     toolVersion = '1.0.0'
+  }
+  cpd {
+    enabled = false
   }
 }
 
@@ -64,6 +67,6 @@ subprojects { project ->
 }
 
 wrapper {
-  gradleVersion = '5.6'
+  gradleVersion = '6.2'
   distributionType = Wrapper.DistributionType.ALL
 }
