--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,8 @@ POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=vanniktech
 POM_DEVELOPER_NAME=Niklas Baudy
+
+android.useAndroidX=true
+android.enableJetifier=false
+
+systemProp.org.gradle.internal.publish.checksums.insecure=true
