--- a/lint-rules-rxjava2/build.gradle
+++ b/lint-rules-rxjava2/build.gradle
@@ -6,6 +6,10 @@ android {
   defaultConfig {
     minSdkVersion versions.minSdk
   }
+
+  buildFeatures {
+    buildConfig = false
+  }
 }
 
 dependencies {
