--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ buildscript {
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0'
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.20.0'
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.13.0'
+    classpath 'org.jetbrains.dokka:dokka-gradle-plugin:1.4.20'
 
     classpath 'com.android.tools.build:gradle:4.1.3'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.36.0'
