--- a/lint-rules-rxjava2-lint/build.gradle
+++ b/lint-rules-rxjava2-lint/build.gradle
@@ -17,3 +17,5 @@ jar {
     attributes('Lint-Registry-v2': 'com.vanniktech.lintrules.rxjava2.IssueRegistry')
   }
 }
+
+apply plugin: "com.vanniktech.maven.publish"
