--- a/lint-rules-android-lint/build.gradle
+++ b/lint-rules-android-lint/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
-targetCompatibility = JavaVersion.VERSION_1_7
-sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
   compileOnly deps.lint.api
@@ -10,6 +10,12 @@ dependencies {
 
   testImplementation deps.lint.core
   testImplementation deps.lint.tests
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
 }
 
 jar {
