Update Android Gradle Plugin to 7.0.1 & Lint to 30.0.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,11 @@ android.useAndroidX=true
 android.enableJetifier=false
 
 systemProp.org.gradle.internal.publish.checksums.insecure=true
+
+android.defaults.buildfeatures.buildconfig=false
+android.defaults.buildfeatures.aidl=false
+android.defaults.buildfeatures.renderscript=false
+android.defaults.buildfeatures.resvalues=false
+android.defaults.buildfeatures.shaders=false
+
+kotlin.stdlib.default.dependency=false
