--- a/build.gradle
+++ b/build.gradle
@@ -3,21 +3,19 @@ apply plugin: 'com.vanniktech.code.quality.tools'
 
 buildscript {
   ext.versions = [
-    kotlin: '1.3.72',
+    kotlin: '1.4.32',
     minSdk: 9,
     compileSdk: 30,
-    lint: '27.2.1',
+    lint: '30.0.1',
   ]
 
   ext.deps = [
-    'kotlin': [
-      'stdlib': "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}",
-    ],
     'lint': [
       'core': "com.android.tools.lint:lint:${versions.lint}",
       'api': "com.android.tools.lint:lint-api:${versions.lint}",
       'tests': "com.android.tools.lint:lint-tests:${versions.lint}",
     ],
+    junit: 'junit:junit:4.13.2',
   ]
 
   repositories {
@@ -29,7 +27,7 @@ buildscript {
     classpath 'com.vanniktech:gradle-code-quality-tools-plugin:0.20.0'
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.17.0'
 
-    classpath 'com.android.tools.build:gradle:4.2.1'
+    classpath 'com.android.tools.build:gradle:7.0.1'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.39.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
   }
@@ -55,6 +53,6 @@ allprojects {
 }
 
 wrapper {
-  gradleVersion = '6.8.3'
+  gradleVersion = '7.1.1'
   distributionType = Wrapper.DistributionType.ALL
 }
