--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -9,6 +9,7 @@ jobs:
   publish:
 
     runs-on: ubuntu-latest
+    if: github.repository == 'vanniktech/lint-rules'
 
     steps:
       - name: Checkout
