--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,3 @@
-apply plugin: 'com.github.ben-manes.versions'
-apply plugin: 'com.vanniktech.code.quality.tools'
-
 buildscript {
   ext.versions = [
     kotlin: '1.4.32',
@@ -28,10 +25,11 @@ buildscript {
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.17.0'
 
     classpath 'com.android.tools.build:gradle:7.0.1'
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.39.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
   }
 }
+
+apply plugin: 'com.vanniktech.code.quality.tools'
 
 codeQualityTools {
   ktlint {
@@ -53,6 +51,6 @@ allprojects {
 }
 
 wrapper {
-  gradleVersion = '7.1.1'
+  gradleVersion = "7.2"
   distributionType = Wrapper.DistributionType.ALL
 }
