Set namespace property & remove empty Manifest.

--- a/lint-rules-android/build.gradle
+++ b/lint-rules-android/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
+  namespace "com.vanniktech.lintrulesandroid"
   compileSdkVersion versions.compileSdk
 
   defaultConfig {
