--- a/lint-rules-kotlin/build.gradle
+++ b/lint-rules-kotlin/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
+  namespace "com.vanniktech.lintruleskotlin"
   compileSdkVersion versions.compileSdk
 
   defaultConfig {
