Update Android Gradle Plugin to 7.3.0 & Lint to 30.3.0 (with Kotlin DSL)

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,8 @@ SONATYPE_HOST=DEFAULT
 SONATYPE_AUTOMATIC_RELEASE=true
 RELEASE_SIGNING_ENABLED=true
 
+org.gradle.jvmargs=-Xmx2048m
+
 android.defaults.buildfeatures.buildconfig=false
 android.defaults.buildfeatures.aidl=false
 android.defaults.buildfeatures.renderscript=false
